--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Trabajo practico opcional 1</title>
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
