--- a/index.html
+++ b/index.html
@@ -9,7 +9,47 @@
 <body>
     <header></header>
     <main>
-        <section></section>
+        <section>
+            <section>
+                <p></p>
+                <h1></h1>
+                <p></p>
+            </section>
+            <section>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+            </section>
+            <section>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+            </section>
+        </section>
     </main>
     <footer></footer>
 </body>
