--- a/index.html
+++ b/index.html
@@ -9,43 +9,43 @@
 <body>
     <header></header>
     <main>
-        <section>
-            <section>
-                <p></p>
-                <h1></h1>
-                <p></p>
+        <section class="Principal">
+            <section class="Encabezado">
+                <p class="Services">Services</p>
+                <h1>What do we offer?</h1>
+                <p>Whit experiense in travel for more that 30 years we can offer you a complete travel solution</p>
             </section>
             <section>
                 <div>
                     <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Air Ticketing</h3>
+                    <p>We book all domestic & international flights with the best prices & discounts</p>
                 </div>
                 <div>
                     <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Visa Porcessing</h3>
+                    <p>We can provide you with the beste consultancy to get you the visa that you want</p>
                 </div>
                 <div>
                     <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Hajj & Umrah</h3>
+                    <p>We are the largest certified provider of Hajj packages for piligrams all over Bangladesh</p>
                 </div>
             </section>
             <section>
                 <div>
                     <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Tour Planning</h3>
+                    <p>Choose from ut thousands of tour packages the one that suits you and your family the most.</p>
                 </div>
                 <div>
                     <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                    <h3>Recluiting</h3>
+                    <p>We can provide you with the best consulancy to get you the visa that you want</p>
                 </div>
                 <div>
                     <img src="" alt="">
-                    <h3></h3>
+                    <h3>Consultancy</h3>
                     <p></p>
                 </div>
             </section>
