--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>What do we offer?</h1>
                 <p>Whit experiense in travel for more that 30 years we can offer you a complete travel solution</p>
             </section>
-            <section>
+            <section class="Servicios1">
                 <div>
                     <img src="" alt="">
                     <h3>Air Ticketing</h3>
@@ -32,7 +32,7 @@
                     <p>We are the largest certified provider of Hajj packages for piligrams all over Bangladesh</p>
                 </div>
             </section>
-            <section>
+            <section class="Servicios2">
                 <div>
                     <img src="" alt="">
                     <h3>Tour Planning</h3>
@@ -46,7 +46,7 @@
                 <div>
                     <img src="" alt="">
                     <h3>Consultancy</h3>
-                    <p></p>
+                    <p>We provde consultancy for all your travel needs. Our travel experts can help you 24X7</p>
                 </div>
             </section>
         </section>
