Agregado de css e imagenes

--- a/index.html
+++ b/index.html
@@ -7,50 +7,56 @@
     <title>Trabajo practico opcional 1</title>
 </head>
 <body>
-    <header></header>
     <main>
-        <section class="Principal">
-            <section class="Encabezado">
-                <p class="Services">Services</p>
-                <h1>What do we offer?</h1>
+        <section class="contenedor">
+            <div class="encabezado">
+                <p class="service">Services</p>
+                <h1 class="titulo">What do we offer?</h1>
                 <p>Whit experiense in travel for more that 30 years we can offer you a complete travel solution</p>
-            </section>
-            <section class="Servicios1">
-                <div>
+                
+            </div>
+            <div class="servicios1">
+
+                <div class="div">
                     <img src="" alt="">
                     <h3>Air Ticketing</h3>
                     <p>We book all domestic & international flights with the best prices & discounts</p>
                 </div>
-                <div>
+
+                <div class="div">
                     <img src="" alt="">
                     <h3>Visa Porcessing</h3>
                     <p>We can provide you with the beste consultancy to get you the visa that you want</p>
                 </div>
-                <div>
+
+                <div class="div">
                     <img src="" alt="">
                     <h3>Hajj & Umrah</h3>
                     <p>We are the largest certified provider of Hajj packages for piligrams all over Bangladesh</p>
-                </div>
-            </section>
-            <section class="Servicios2">
-                <div>
-                    <img src="" alt="">
+                </div>         
+
+            </div>
+            <div class="servicios2">
+
+                <div class="div"> 
+                    <div> Iconos diseñados por <a href="https://www.flaticon.es/autores/freepik" title="Freepik"> Freepik </a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es'</a></div>
                     <h3>Tour Planning</h3>
                     <p>Choose from ut thousands of tour packages the one that suits you and your family the most.</p>
                 </div>
-                <div>
+
+                <div class="div">
                     <img src="" alt="">
                     <h3>Recluiting</h3>
                     <p>We can provide you with the best consulancy to get you the visa that you want</p>
                 </div>
-                <div>
+
+                <div class="div">
                     <img src="" alt="">
                     <h3>Consultancy</h3>
                     <p>We provde consultancy for all your travel needs. Our travel experts can help you 24X7</p>
-                </div>
-            </section>
+                </div>            
+            </div>
+
         </section>
     </main>
-    <footer></footer>
 </body>
-</html>
