--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <div class="servicios1">
 
                 <div class="div">
-                    <img src="" alt="">
+                    <div class="imagenes"><img src="img/avion-despegando.png" alt=""></div>
                     <h3>Air Ticketing</h3>
                     <p>We book all domestic & international flights with the best prices & discounts</p>
                 </div>
 
                 <div class="div">
-                    <img src="" alt="">
+                    <div class="imagenes"><img src="img/visa.png" alt=""></div>
                     <h3>Visa Porcessing</h3>
                     <p>We can provide you with the beste consultancy to get you the visa that you want</p>
                 </div>
 
                 <div class="div">
-                    <img src="" alt="">
+                    <div class="imagenes"><img src="img/la-meca-de-la-kaaba.png" alt=""></div>
                     <h3>Hajj & Umrah</h3>
                     <p>We are the largest certified provider of Hajj packages for piligrams all over Bangladesh</p>
                 </div>         
@@ -39,19 +39,21 @@
             <div class="servicios2">
 
                 <div class="div"> 
-                    <div> Iconos diseñados por <a href="https://www.flaticon.es/autores/freepik" title="Freepik"> Freepik </a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es'</a></div>
+                    <div>
+                        <div class="imagenes"><img src="img/excursionismo.png" alt=""></div>
+                    </div>
                     <h3>Tour Planning</h3>
                     <p>Choose from ut thousands of tour packages the one that suits you and your family the most.</p>
                 </div>
 
                 <div class="div">
-                    <img src="" alt="">
+                    <div class="imagenes"><img src="img/entrevista.png" alt=""></div>
                     <h3>Recluiting</h3>
                     <p>We can provide you with the best consulancy to get you the visa that you want</p>
                 </div>
 
                 <div class="div">
-                    <img src="" alt="">
+                    <div class="imagenes"><img src="img/estrechar-la-mano.png" alt=""></div>
                     <h3>Consultancy</h3>
                     <p>We provde consultancy for all your travel needs. Our travel experts can help you 24X7</p>
                 </div>            
